Add off-heap market snapshot benchmarks